--- a/Website Template/index.html
+++ b/Website Template/index.html
@@ -23,8 +23,8 @@
         <div class="hero-content">
             <img src="me.jpg" alt="Image of Me">
             <div class="hero-text">
-                <h1>NAME</h1>
-                <p>TITLE</p>
+                <h1>Nivedita Menon</h1>
+                <p>Undergraduate Research Assistant</p>
             </div>
         </div>
     </div>
@@ -32,11 +32,18 @@
         <section>
             <h2>About Me</h2>
             <p>
-                This is a paragraph about me!
+                I am a third year undergraduate pursuing a Bachelor's of 
+                Science in Wildlife Biology and Conservation at the University 
+                of Alaska Fairbanks. I am from the Bay Area in California and
+                moved to Fairbanks in 2022.
             </p>
 
             <p>
-                This is another paragraph about me!
+                I am currently working on the Inbre Pilot project “Mitochondrial
+                Suppression in a Human-sized Hibernator” in Kristin O’Brien’s 
+                lab under Dr. Rice. This semester, we are working on determining 
+                the activity in mitochondrial complex I of spring, summer, and 
+                hibernating black bear tissue.
             </p>
                 
         </section>
@@ -47,14 +54,14 @@
             </p>
             <ul>
                 <li>
-                    <a href="https://github.com">A link goes here</a>
+                    <a href="https://github.com/niveditamen">A link goes here</a>
                 </li>
                 
             </ul>
         </section>
     </main>
     <footer>
-        <p>2024 NAME</p>
+        <p>2025 Menon</p>
     </footer>
     <script src="script.js"></script>
 </body>
