--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </p>
             <ul>
                 <li>
-                    <a href="https://github.com/niveditamen">A link goes here</a>
+                    <a href="www.linkedin.com/in/nivedita-menon-7684952b4">A link goes here</a>
                 </li>
                 
             </ul>
